--- a/rates-and-faq.html
+++ b/rates-and-faq.html
@@ -29,7 +29,7 @@
   <p>For campaigns, custom minisites and other projects, project pricing will be discussed based on the outline of your needs.</p>
 
   <h3>Turnaround</h3>
-  <p>Turnaround for regular web updates is generally within 3 business days. For minsites, campaign and other larger requests, an initial draft will generally be presented within 7 business days. Inquire for exact specifics on larger campaings.</p>
+  <p>Turnaround for regular web updates is generally within 3 business days. For minisites, campaign and other larger requests, an initial draft will generally be presented within 7 business days. Inquire for exact specifics on larger campaigns.</p>
 
   <p>Rush turnaround is sometimes available upon request for an additional $25 per hour.</p>
 
