--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
 
 		<p>Let's get in touch!</p><p>
 
-			You can connect with us at <a href="mailto:contact@webmk.co">contact@webmk.co</a></p>
+			You can connect with us about all your web development needs at <a href="mailto:contact@webmk.co">contact@webmk.co</a> or 347-788-0770.</p>
+
+		
 
 	</div>
 
